# Parallel

MPI/: 05.cpp  06.cpp  07.cpp  08.cpp  CMakeLists.txt  c1.cpp  c2.cpp  c4.cpp  c44.cpp  ke  kek  kek1
NewProject/: CMakeLists.txt  main.cpp  omp_01.cpp  omp_02.cpp  omp_03.cpp  omp_04.cpp.cpp  omp_05.cpp  omp_06.cpp  omp_07.cpp  omp_08.cpp  omp_09.cpp  omp_10.cpp  omp_11.cpp  omp_12.cpp
